--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,7 +11,12 @@
     p {
       padding:0 15px;
     }
-  
+
+    img {
+      border-radius: 5px;
+      max-width: 800px;
+      width:100%;
+    }  
   }
 
   .space-images {
@@ -24,6 +29,21 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media (@phone) {
+        width: 88%;
+        margin: 20px auto;
+      }
+    }
+
+    @media (@phone) {
+      .launch {
+        display: none;
+      }
+    
+      .sky {
+        display: none;
+      }
     }
   }
 
@@ -46,24 +66,57 @@
     display: flex;
     justify-content: center;
 
+    @media (@phone) {
+      flex-wrap: wrap-reverse;
+    }
+
     .walk-text {
       width: 50%;
 
+      @media (@phone) {
+        width: 100%;
+      }
+
       h3 {
         margin-bottom: 10px;
+
+        @media (@phone) {
+          margin: 20px 0px 0px 0px;
+        }
       }
 
       p {
         margin-bottom: 26px;
+
+        @media (@phone) {
+          margin: 0px 0px 20px 0px;
+        }
       }
 
       .btn {
+        .sign-up();
+        @media (@phone) {
+          .sign-up(@max-width: 100%, @padding-top: 20px, @padding-bottom: 20px);
+        }
+      }
+
+      .btn:hover {
+        .sign-up(@background-color:@porcelain , @color: @btn-bg-color);
+
+        @media (@phone) {
+          .sign-up(@background-color:@porcelain , @color: @btn-bg-color, @max-width: 100%, @padding-top: 20px, @padding-bottom: 20px);
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media (@phone) {
+        width: 100%;
+        margin-left: 0;
+      }
       
       img {
         width: 100%;
