Happy little trees

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,5 +1,16 @@
 // Mixins Here
 
+// 100% width
+.widen() {
+    width: 100%;
+}
+
+// don't display
+.undisplay() {
+    display: none;
+}
+
+// sign-up button
 .sign-up(@border-radius: 5px, @background-color: @btn-bg-color, @color: @porcelain, @font-size: 1.6rem, 
     @font-weight: bold, @max-width: 100px, @padding-bottom: 10px, @padding-top: 10px,
     @text-align: center, @width: 100%) {
