--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,8 @@ footer {
 @media (max-width: 500px) {
   .home .walk {
     flex-wrap: wrap-reverse;
+    margin-top: 20px;
+    padding: 20px 20px;
   }
 }
 .home .walk .walk-text {
@@ -297,8 +299,8 @@ footer {
     font-size: 1.6rem;
     font-weight: bold;
     max-width: 100%;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     text-align: center;
     width: 100%;
   }
@@ -323,8 +325,8 @@ footer {
     font-size: 1.6rem;
     font-weight: bold;
     max-width: 100%;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     text-align: center;
     width: 100%;
   }
