--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,14 +15,14 @@
     img {
       border-radius: 5px;
       max-width: 800px;
-      width:100%;
+      .widen();
     }  
   }
 
   .space-images {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    .widen();
 
     img {
       width: 28%;
@@ -38,11 +38,11 @@
 
     @media (@phone) {
       .launch {
-        display: none;
+        .undisplay();
       }
     
       .sky {
-        display: none;
+        .undisplay();
       }
     }
   }
@@ -68,13 +68,15 @@
 
     @media (@phone) {
       flex-wrap: wrap-reverse;
+      margin-top: 20px;
+      padding: 20px 20px;
     }
 
     .walk-text {
       width: 50%;
 
       @media (@phone) {
-        width: 100%;
+        .widen();
       }
 
       h3 {
@@ -96,7 +98,7 @@
       .btn {
         .sign-up();
         @media (@phone) {
-          .sign-up(@max-width: 100%, @padding-top: 20px, @padding-bottom: 20px);
+          .sign-up(@max-width: 100%, @padding-top: 25px, @padding-bottom: 25px);
         }
       }
 
@@ -104,7 +106,7 @@
         .sign-up(@background-color:@porcelain , @color: @btn-bg-color);
 
         @media (@phone) {
-          .sign-up(@background-color:@porcelain , @color: @btn-bg-color, @max-width: 100%, @padding-top: 20px, @padding-bottom: 20px);
+          .sign-up(@background-color:@porcelain , @color: @btn-bg-color, @max-width: 100%, @padding-top: 25px, @padding-bottom: 25px);
         }
       }
     }
@@ -114,12 +116,12 @@
       margin-left: 4%;
 
       @media (@phone) {
-        width: 100%;
+        .widen();
         margin-left: 0;
       }
       
       img {
-        width: 100%;
+        .widen();
         height: auto;
         border-radius: 10px;
       }
