--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,7 @@
     h1 {
         font-size: 4rem;
         text-align: center;
-        width: 100%
+        .widen();
     }
 
     .container-of-the-links {
@@ -16,7 +16,7 @@
         margin: 15px auto 0 auto;
         width: 40%;
         @media (@phone) {
-            width: 100%;
+            .widen();
         }
 
         a {
